Updated Masaka tribble power action to use actions instead of effects